add website logo on card header

--- a/src/components/Credentials/styles.css
+++ b/src/components/Credentials/styles.css
@@ -1,6 +1,11 @@
 .toast-position {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 1000;
-  }
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.card-website-logo {
+  height: 15px;
+  margin-right: 10px;
+}
