update edit and delete actions

--- a/src/components/Savings/styles.css
+++ b/src/components/Savings/styles.css
@@ -8,3 +8,11 @@
     border: 0;
     border-top: 1px solid black;
 }
+
+.action-style {
+    height: 25px;
+}
+
+.action-style:hover {
+    cursor: pointer;
+}
