update login/register form

--- a/src/components/Login/styles.css
+++ b/src/components/Login/styles.css
@@ -1,5 +1,16 @@
 .login-form {
     display: flex;
     flex-direction: column;
-    width: 25%;
+}
+
+.user-form-container {
+    border: solid black 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.change-link {
+    font-weight: bold;
+    text-decoration: none;
 }
